Add project-base and totally overhaul project.clj